package java;

import java.Simulation.SimulationController;
import java.UI.CLI;

public class Main {

    public static void main(String[] args) {
        //TODO: 1. CLI.getInput()
        //TODO: 2. SimulationController.initSimulation()
        //TODO: 3. SimulationController.getBoard()
        //TODO: 4. CLI.printBoard()

        CLI test = new CLI();
        test.getInput();
    }
}
