package java.Simulation.AI;

public class HunterAI {
}
