package java.Simulation.SimulationObjects;

import java.util.List;

public class Board {

    private int width;
    private int height;
    private List<Hunter> hunters;
    private List<Prey> preys;
    private List<Obstacle> obstacles;

    public void spawnHunter() {

    }

    public void spawnPrey() {

    }

    public void spawnObstacle() {

    }
}
