package java.Simulation.SimulationObjects;

public class Hunter implements LivingCreature {


}
