package java.Simulation.SimulationObjects;

public interface LivingCreature extends BoardObject {


}
