package java.Simulation.SimulationObjects;

public class Obstacle implements BoardObject {
}
