package java.Simulation.SimulationObjects;

public class Prey implements LivingCreature {
}
