package java.Simulation;

public class Statistics {

    public int getHunterCounter() {
        return 0;
    }

    public int getPreyCount() {
        return 0;
    }

    public int getObstacleCount() {
        return 0;
    }

    public int getHunterPreyRatio() {
        return 0;
    }
}
