@startuml

title __HUNTERSIMULATION_MAIN's Class Diagram__\n

  package  {
    package Simulation {
      package Simulation.AI {
        abstract class AI {
        }
      }
    }
  }
  

  package  {
    package Simulation {
      package Simulation.SimulationObjects {
        class Board {
        }
      }
    }
  }
  

  package  {
    package Simulation {
      package Simulation.SimulationObjects {
        interface BoardObject {
        }
      }
    }
  }
  

  package  {
    package UI {
      class CLI {
      }
    }
  }
  

  package  {
    package Simulation {
      package Simulation.SimulationObjects {
        class DeadCorpse {
        }
      }
    }
  }
  

  package  {
    package Simulation {
      package Simulation.AI {
        class GroupAI {
        }
      }
    }
  }
  

  package  {
    package Simulation {
      package Simulation.SimulationObjects {
        class Hunter {
        }
      }
    }
  }
  

  package  {
    package Simulation {
      package Simulation.AI {
        class HunterAI {
        }
      }
    }
  }
  

  package  {
    package Simulation {
      package Simulation.SimulationObjects {
        abstract class LivingCreature {
        }
      }
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    package Simulation {
      package Simulation.SimulationObjects {
        class Obstacle {
        }
      }
    }
  }
  

  package  {
    package Simulation {
      package Simulation.SimulationObjects {
        class Prey {
        }
      }
    }
  }
  

  package  {
    package Simulation {
      package Simulation.AI {
        class PreyAI {
        }
      }
    }
  }
  

  package  {
    package Simulation {
      class SimulationController {
      }
    }
  }
  

  package  {
    package Simulation {
      class Statistics {
      }
    }
  }
  

  package  {
    package UI {
      class UserInput {
      }
    }
  }
  

  package  {
    package UI {
      class WrongUserInputException {
      }
    }
  }
  

  AI o-- Status : status
  AI o-- LivingCreature : owner
  DeadCorpse -up-|> BoardObject
  DeadCorpse o-- Board : board
  DeadCorpse o-- Location : loc
  GroupAI o-- Prey : target
  GroupAI o-- HunterAI : leader
  GroupAI o-- DeadCorpse : corpse
  Hunter -up-|> LivingCreature
  HunterAI -up-|> AI
  HunterAI o-- GroupAI : groupIntellingence
  LivingCreature -up-|> BoardObject
  LivingCreature o-- AI : brain
  LivingCreature o-- Board : myBoard
  LivingCreature o-- Location : loc
  Obstacle -up-|> BoardObject
  Obstacle o-- Location : loc
  Prey -up-|> LivingCreature
  PreyAI -up-|> AI
  SimulationController o-- Board : board
  SimulationController o-- Statistics : stats
  Statistics o-- SimulationController : simulation


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
